cmake_minimum_required(VERSION 3.13)
project(AdventOfCode2024 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

add_executable(
  Day1
  1/main.cpp)

add_executable(
  Day2
  2/main.cpp)

add_executable(
  Day3
  3/main.cpp)

add_executable(
  Day4
  4/main.cpp)

add_executable(
  Day5
  5/main.cpp)

add_executable(
  Day6
  6/main.cpp)

add_executable(
  Day7
  7/main.cpp)

add_executable(
  Day8
  8/main.cpp)

add_executable(
  Day9
  9/main.cpp)